adicionando cadastro e exclusao de contas

--- a/src/pages/contas/contas.html
+++ b/src/pages/contas/contas.html
@@ -1,4 +1,3 @@
-
 <ion-header>
 
   <ion-navbar>
@@ -12,14 +11,23 @@
 
 
 <ion-content padding>
-<ion-list>
-  <ion-item *ngFor="let item of listaContas">
-    {{ item.descricao }}
-  </ion-item>
-</ion-list>
-<ion-fab bottom right >
-  <button ion-fab  color="danger" (click)="insert()" >
-    <ion-icon name="add"></ion-icon>
-  </button>
-</ion-fab>
+  <ion-list>
+    <ion-item-sliding *ngFor="let item of listaContas">
+      <ion-item (click)="edit(item)">
+        {{ item.descricao}}
+      </ion-item>
+      <ion-item-options>
+        <button (click)="delete(item)" ion-button color="danger">
+          Excluir
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+
+
+  <ion-fab bottom right>
+    <button ion-fab color="danger" (click)="insert()">
+      <ion-icon name="add"></ion-icon>
+    </button>
+  </ion-fab>
 </ion-content>
