--- a/src/pages/modal-contas/modal-contas.html
+++ b/src/pages/modal-contas/modal-contas.html
@@ -11,11 +11,11 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding>  
   <ion-list>
     <ion-item>
       <ion-label stacked>Descrição</ion-label>
-      <ion-input type="text" [(ngModel)]="conta.Descricao"></ion-input>
+      <ion-input type="text" [(ngModel)]="contaObject.descricao"></ion-input>
     </ion-item>
   </ion-list>
   <button ion-button full (click)="salvar()"> Salvar </button>
