--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,20 +1,55 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+<ion-header >
+  <ion-navbar >
+    <ion-title >Home</ion-title >
     <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+    <ion-card>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUIvuXdB1eus_TZiSOn_jQdgJ1SMnBFdPNhPOg-r91QpuIdDY9BA" />
+        <ion-card-content>
+          <ion-card-title>
+            Aplicativo Financeiro
+            </ion-card-title>
+          <p>
+            Este aplicativo é de controle finaceiro.
+          </p>
+        </ion-card-content>
+        <ion-row no-padding>
+            <ion-col>
+              <button ion-button clear small color="primary" icon-start (click)="onContas()">
+                <ion-icon name='card'></ion-icon>
+                Contas
+              </button>
+            </ion-col>
+            <ion-col text-center>
+              <button ion-button clear small color="Primary" icon-start (click)="onLancamentos()">
+                <ion-icon name='calculator'></ion-icon>
+                Lançamentos
+              </button>            
+            </ion-col>
+          </ion-row>
+      </ion-card>
+      <div style="margin-top: 40px">
+      <button ion-button >
+          <ion-icon name="logo-facebook"></ion-icon>
+      </button>
+      <button ion-button >
+          <ion-icon name="logo-instagram"></ion-icon>
+      </button>
+      <button ion-button >
+          <ion-icon name="logo-skype"></ion-icon>
+      </button>
+      <button ion-button >
+          <ion-icon name="contacts"></ion-icon>
+      </button>
+    </div>
 </ion-content>
+<ion-footer>
+    <ion-toolbar>
+      <ion-title>Desenvolvido por PradoSystem - 2018</ion-title>
+    </ion-toolbar>
+  </ion-footer>
