--- a/src/pages/contas/contas.html
+++ b/src/pages/contas/contas.html
@@ -26,7 +26,7 @@
 
 
   <ion-fab bottom right>
-    <button ion-fab color="danger" (click)="insert()">
+    <button ion-fab color="secondary" (click)="insert()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
