--- a/src/pages/lancamentos/lancamentos.html
+++ b/src/pages/lancamentos/lancamentos.html
@@ -45,7 +45,7 @@
 
 
   <ion-fab bottom right>
-    <button ion-fab color="danger" (click)="insert()">
+    <button ion-fab color="secondary" (click)="insert()">
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
